Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-12340

custom_cluster.test_catalogd_ha.TestCatalogdHA.test_two_catalogd_with_force_active fails in exhaustive tests

    XMLWordPrintableJSON

Details

    Description

      custom_cluster.test_catalogd_ha.TestCatalogdHA.test_two_catalogd_with_force_active fails on the assertion that checks that only one catalog is active.

      Error Message

      assert True != True + where True = <bound method CatalogdService.get_metric_value of <tests.common.impala_service.CatalogdService object at 0x7f9b432e8d90>>('catalog-server.active-status') + where <bound method CatalogdService.get_metric_value of <tests.common.impala_service.CatalogdService object at 0x7f9b432e8d90>> = <tests.common.impala_service.CatalogdService object at 0x7f9b432e8d90>.get_metric_value + and True = <bound method CatalogdService.get_metric_value of <tests.common.impala_service.CatalogdService object at 0x7f9b432e8a90>>('catalog-server.active-status') + where <bound method CatalogdService.get_metric_value of <tests.common.impala_service.CatalogdService object at 0x7f9b432e8a90>> = <tests.common.impala_service.CatalogdService object at 0x7f9b432e8a90>.get_metric_value

      Stacktrace

      custom_cluster/test_catalogd_ha.py:372: in test_two_catalogd_with_force_active assert(catalogd_service_1.get_metric_value("catalog-server.active-status") E assert True != True E + where True = <bound method CatalogdService.get_metric_value of <tests.common.impala_service.CatalogdService object at 0x7f9b432e8d90>>('catalog-server.active-status') E + where <bound method CatalogdService.get_metric_value of <tests.common.impala_service.CatalogdService object at 0x7f9b432e8d90>> = <tests.common.impala_service.CatalogdService object at 0x7f9b432e8d90>.get_metric_value E + and True = <bound method CatalogdService.get_metric_value of <tests.common.impala_service.CatalogdService object at 0x7f9b432e8a90>>('catalog-server.active-status') E + where <bound method CatalogdService.get_metric_value of <tests.common.impala_service.CatalogdService object at 0x7f9b432e8a90>> = <tests.common.impala_service.CatalogdService object at 0x7f9b432e8a90>.get_metric_value

      Attachments

        Activity

          People

            wzhou Wenzhe Zhou
            prozsa Peter Rozsa
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: